--- a/index.html
+++ b/index.html
@@ -21,11 +21,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- link video  -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+        integrity="sha512-+EoPw+Fiwh6eSeRK7zwIKG2MA8i3rV/DGa3tdttQGgWyatG/SkncT53KHQaS5Jh9MNOT3dmFL0FjTY08And/Cw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
 
+    <!-- NUMBER -->
     <section class="number bg-success w-100 h-25">
         <div class="container  row ">
             <div class="col-3">
@@ -36,15 +41,16 @@
             <div class="col-3"></div>
         </div>
     </section>
-    <section class="plan bg-dark bg-gradient">
+    <section class="plan" style="background-color: rgb(236, 242, 243) !important;">
         <div class="container">
-            <h1 class="text-danger-emphasis text-center fs-2" stlyle="margin-top: 50px;">Our Plan</h1>
-            <h2 class="text-light fs-1 text-center mt-4">Affordable Packages</h2>
+            <h1 class="text-danger-emphasis text-center fs-2" stlyle="margin-top: 70px !important;">Our Plan</h1>
+            <h2 class="text-black text-center mt-4" style="font-size: 60px !important; font-weight: 600 !important;">
+                Affordable Packages</h2>
         </div>
-        <div class="row" style="margin: 50px 200px;">
-            <div class="container col-4">
-                <div class="plant_content shadow-sm p-3 mb-5 bg-dark rounded text-center mt-5">
-                    <h1 class="mt-5 text-light">Free Package</h1>
+        <div class="row" style="margin: 50px 50px;">
+            <div class="container col-12 col-md-4">
+                <div class="plant_content shadow-sm p-3 mb-5 bg-light rounded text-center mt-5">
+                    <h1 class="mt-5 text-black">Free Package</h1>
                     <p class="mt-3">
                         <span class="fs-3 text-success fw-bold">$</span>
                         <span class="number_plan text-success fw-bold" style="font-size: 60px !important;">0</span>
@@ -55,16 +61,15 @@
                         3 Vet Visit <br><br>
                         3 Pet Spa <br><br>
                         Free Supports <br><br>
-                        Customer Support 
+                        Customer Support
                     </p>
-                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Buy now</button>
+                    <button class="btn btn-success fs-3 mt-4 mb-4" style="width: 220px;height: 60px;"> Buy now</button>
                 </div>
             </div>
-            <div class="container col-4">
-                <div class="plant_content bg-success text-center">
-                    <div class="bg-light mx-auto" style="width: 130px;height: 40px;border-radius: 5px; margin-top: 40px !important;">
-                        <p class="fs-5 fw-bold text-success">Save 10%</p>
-                    </div>
+            <div class="container col-12 col-md-4">
+                <div class="plant_content bg-success text-center rounded-top">
+                    <p class="fs-5 fw-bold text-success bg-light mx-auto pt-2"
+                        style="width:140px;height: 50px; border-radius: 5px;">Save 10%</p>
                     <h1 class="text-light mt-5">Standard Package</h1>
                     <p class="mt-3 pb-4">
                         <span class="fs-3 text-light fw-bold">$</span>
@@ -72,20 +77,22 @@
                         <span class="fs-5 text-light">/month</span>
                     </p>
                 </div>
-                <div class="shadow-sm p-3 mb-5 bg-dark text-center mt-5" style="margin-top: -15px !important;">
+                <div class="shadow-sm p-3 mb-5 bg-light text-center mt-5 rounded-bottom"
+                    style="margin-top: -15px !important;">
                     <p class="fs-4 mt-5 text-secondary">
                         5 Dog Walk <br><br>
                         3 Vet Visit <br><br>
                         3 Pet Spa <br><br>
                         Free Supports <br><br>
-                        Customer Support 
+                        Customer Support
                     </p>
-                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Get started</button>
+                    <button class="btn btn-success fs-3 mt-5 mb-4" style="width: 220px;height: 60px;"> Get
+                        started</button>
                 </div>
             </div>
-            <div class="container col-4">
-                <div class="plant_content shadow-sm p-3 mb-5 bg-dark rounded text-center mt-5">
-                    <h1 class="mt-5 text-light">Pro Package</h1>
+            <div class="container col-12 col-md-4">
+                <div class="plant_content shadow-sm p-3 mb-5 bg-light rounded text-center mt-5">
+                    <h1 class="mt-5 text-black">Pro Package</h1>
                     <p class="mt-3">
                         <span class="fs-3 text-success fw-bold">$</span>
                         <span class="number_plan text-success fw-bold" style="font-size: 60px !important;">89</span>
@@ -96,23 +103,54 @@
                         3 Vet Visit <br><br>
                         3 Pet Spa <br><br>
                         Free Supports <br><br>
-                        Customer Support 
+                        Customer Support
                     </p>
-                    <button class="btn btn-success fs-3 mt-4" style="width: 220px;height: 60px;"> Buy now</button>
+                    <button class="btn btn-success fs-3 mt-4 mb-4" style="width: 220px;height: 60px;"> Buy now</button>
                 </div>
             </div>
         </div>
     </section>
-    <section class="title-video"></section>
-    <section class="clients"></section>
+
+
+    <!-- VIDEO -->
+    <section class="title-video">
+        <div class="container text-center" style="margin-top: 150px !important;">
+            <h4 class="text-danger">BETTER PET NUTRITION</h4>
+            <h1 class="text-black fw-bold" style="font-size: 50px;">The Finest Fresh Food And All Your Pet Needs.</h1>
+            <p class="fs-4 text-secondary">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Lorem ipsum dolor sit amet elit consec tetur adipisi elit. <br>
+                Lorem ipsum dolor sit amet elit consec tetur adipisi elit.
+                Iure voluptatibus explicabo officia.
+            </p>
+        </div>
+        <div class="plan_video text-center mt-5 position-relative">
+            <img src="/image/banner2.jpg" style="max-width: 1200px;max-height: 500px;" class="rounded-3">
+
+
+            <a href="#small-dialog" class="open-popup-link popup-with-zoom-anim">
+                <i
+                    class="plan_icon fa-solid fa-play d-inline-block text-light position-absolute top-50 start-50 translate-middle z-1"></i>
+            </a>
+
+            <div id="small-dialog" class="zoom-anim-dialog mfp-hide">
+                <iframe title="vimeo-player" src="https://player.vimeo.com/video/101587706?h=187bfc0989" width="640"
+                    height="360" frameborder="0" allowfullscreen></iframe>
+            </div>
+        </div>
+    </section>
+    <br><br><br><br><br><br><br><br>
+
+    <!-- CLIENTS -->
+    <section class="clients" style="background-color: rgb(236, 242, 243);">
+        <div class="clients_title text-center">
+            <p class="text-danger fs-2">TESTIMONIALS</p>
+            <h1 class="text-black fw-bold mb-5">Happy Clients & Feedbacks</h1>
+        </div>
+        
+    </section>
     <section class="contact_update"></section>
     <footer class="footer"></footer>
-
-
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
 
 
@@ -122,6 +160,33 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
         crossorigin="anonymous"></script>
+    <!-- link js video -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+        integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"
+        integrity="sha512-IsNh5E3eYy3tr/JiX2Yx4vsCujtkhwl7SLqgnwLNgf04Hrt9BT9SXlLlZlWx+OK4ndzAoALhsMNcCmkggjZB1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <!-- ĐOẠN CODE JS CỦA PHẦN VIDEO -->
+    <script>
+        $(document).ready(function () {
+            $(".popup-with-zoom-anim").magnificPopup({
+                type: "inline",
+
+                fixedContentPos: false,
+                fixedBgPos: true,
+
+                overflowY: "auto",
+
+                closeBtnInside: true,
+                preloader: false,
+
+                midClick: true,
+                removalDelay: 300,
+                mainClass: "my-mfp-zoom-in"
+            });
+        });
+    </script>
 </body>
 
 </html>
