--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pooch Care</title>
+    <title>Pooch Care an Animal Category</title>
     <!-- link css -->
     <link rel="stylesheet" href="/Styles/index.css">
     <!-- link boostrap -->
@@ -147,12 +147,144 @@
             <p class="text-danger fs-2">TESTIMONIALS</p>
             <h1 class="text-black fw-bold mb-5">Happy Clients & Feedbacks</h1>
         </div>
-        
+
+        <!-- plan carousel -->
+        <div id="carouselExampleIndicators" class="carousel slide" style="width: 100% !important;height: 500px;">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active mx-3 text-secondary"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="active mx-3 text-secondary"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" class="active mx-3 text-secondary"
+                    aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" class="active mx-3 text-secondary"
+                    aria-label="Slide 4"></button>
+            </div>
+            <div class="carousel-inner ">
+                <div class="carousel-item active">
+                    <div class="bg-light mx-auto mt-4" style="width: 600px !important; height: 390px !important;">
+                        <p class="mx-5 text-left">
+                            <span class="text-success" style="font-size: 70px;">"</span>
+                            <span class="texxt-secondary fs-4">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Neque odio minima perferendis,
+                                quaerat cum recusandae in blanditiis at dolorem!
+                                Ipsam incidunt magni debitis amet alias quas cumque?
+                            </span>
+                        </p>
+                        <div class="">
+                            <img src="/image/f1.jpg" style="width: 100px;height: 100px;border-radius: 50%;float: left;"
+                                class="ms-5">
+                            <div class="ms-2" style="float: left;">
+                                <p class="fs-4 fw-bold text-black ms-1">John Wilson</p>
+                                <p class="fs-4 text-secondary ms-1">Example City</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="bg-light mx-auto mt-4" style="width: 600px !important; height: 390px !important;">
+                        <p class="mx-5 text-left">
+                            <span class="text-success" style="font-size: 70px;">"</span>
+                            <span class="texxt-secondary fs-4">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Neque odio minima perferendis,
+                                quaerat cum recusandae in blanditiis at dolorem!
+                                Ipsam incidunt magni debitis amet alias quas cumque?
+                            </span>
+                        </p>
+                        <div class="">
+                            <img src="/image/f2.jpg" style="width: 100px;height: 100px;border-radius: 50%;float: left;"
+                                class="ms-5">
+                            <div class="ms-2" style="float: left;">
+                                <p class="fs-4 fw-bold text-black ms-1">Julia Sakura</p>
+                                <p class="fs-4 text-secondary ms-1">Example City</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="bg-light mx-auto mt-4" style="width: 600px !important; height: 390px !important;">
+                        <p class="mx-5 text-left">
+                            <span class="text-success" style="font-size: 70px;">"</span>
+                            <span class="texxt-secondary fs-4">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Neque odio minima perferendis,
+                                quaerat cum recusandae in blanditiis at dolorem!
+                                Ipsam incidunt magni debitis amet alias quas cumque?
+                            </span>
+                        </p>
+                        <div class="">
+                            <img src="/image/f3.jpg" style="width: 100px;height: 100px;border-radius: 50%;float: left;"
+                                class="ms-5">
+                            <div class="ms-2" style="float: left;">
+                                <p class="fs-4 fw-bold text-black ms-1">Roy Linderson</p>
+                                <p class="fs-4 text-secondary ms-1">Example City</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="bg-light mx-auto mt-4" style="width: 600px !important; height: 390px !important;">
+                        <p class="mx-5 text-left">
+                            <span class="text-success" style="font-size: 70px;">"</span>
+                            <span class="texxt-secondary fs-4">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Neque odio minima perferendis,
+                                quaerat cum recusandae in blanditiis at dolorem!
+                                Ipsam incidunt magni debitis amet alias quas cumque?
+                            </span>
+                        </p>
+                        <div class="">
+                            <img src="/image/f1.jpg" style="width: 100px;height: 100px;border-radius: 50%;float: left;"
+                                class="ms-5">
+                            <div class="ms-2" style="float: left;">
+                                <p class="fs-4 fw-bold text-black ms-1">Mike Thyson</p>
+                                <p class="fs-4 text-secondary ms-1">Example City</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <div class="bg-light mx-auto mt-4" style="width: 600px !important; height: 390px !important;">
+                        <p class="mx-5 text-left">
+                            <span class="text-success" style="font-size: 70px;">"</span>
+                            <span class="texxt-secondary fs-4">
+                                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                                Neque odio minima perferendis,
+                                quaerat cum recusandae in blanditiis at dolorem!
+                                Ipsam incidunt magni debitis amet alias quas cumque?
+                            </span>
+                        </p>
+                        <div class="">
+                            <img src="/image/f4.jpg" style="width: 100px;height: 100px;border-radius: 50%;float: left;"
+                                class="ms-5">
+                            <div class="ms-2" style="float: left;">
+                                <p class="fs-4 fw-bold text-black ms-1">John Wilson</p>
+                                <p class="fs-4 text-secondary ms-1">Example City</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <!-- <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button> -->
+        </div>
+
     </section>
     <section class="contact_update"></section>
     <footer class="footer"></footer>
 
-
+    <br><br><br><br><br><br><br><br><br><br>
 
     <!-- link js custom -->
     <script src="/js/index.js"></script>
@@ -187,6 +319,8 @@
             });
         });
     </script>
+
+
 </body>
 
 </html>
